--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     </div>
                     <div class="item" data-id="ui">
                         <div class="inner">
-                            <img src="./img/portfolio/estm/loginimage.PNG" alt="portfolio" />
+                            <img src="./img/portfolio/estm/loginimage.png" alt="portfolio" />
                             <div class="overlay">
                                 <span class="fa fa-plus"></span>
                                 <h4>Desktop Application</h4>
