--- a/index.html
+++ b/index.html
@@ -44,17 +44,15 @@
     </header>
     <section class="home" id="home">
         <div class="container">
+            <div class="additional-image">
+                <img src="img\ball.png" class="rotating-image" alt="Description">
+            </div>
             <div class="row full-screen">
                 <div class="home-content">
                     <div class="block">
-                        <!--
-
                         <h6>Hi, my name is</h6>
-                        <h1>Wassim ben</h1>
+                        <h1>Wassim Ben</h1>
                         <h3>Expert Backend Developer & Algorithm Specialist</h3>
-                         <div class="cv-btn">
-                            <a href="#">Download CV</a>
-                         -->
                     </div>
                 </div>
             </div>
