--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="description" content="A clean, beautiful and responsive portfolio template for Developers! using only Html, CSS, and JavaScript">
+    <meta name="description"
+        content="A clean, beautiful and responsive portfolio template for Developers! using only Html, CSS, and JavaScript">
     <meta name="author" content="Puskar Adhikari">
 
     <title>Wassim Ben| Software Engineer</title>
@@ -26,7 +27,7 @@
         <div class="container">
             <div class="row">
                 <div class="brand-name">
-                    <a href="/" class="logo">Pfolio</a>
+                    <a href="/" class="logo">WB</a>
                 </div>
                 <div class="hamburger">
                     <i class="fa fa-bars"></i>
@@ -35,8 +36,8 @@
                     <ul>
                         <li><a href="#home" class="active">Home</a></li>
                         <li><a href="#about">About</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#services">Skills</a></li>
+                        <li><a href="#portfolio">Latest Works</a></li>
                     </ul>
                 </div>
             </div>
@@ -51,8 +52,10 @@
                 <div class="home-content">
                     <div class="block">
                         <h6>Hi, my name is</h6>
-                        <h1>Wassim Ben</h1>
-                        <h3>Expert Backend Developer & Algorithm Specialist</h3>
+                        <h1>Wassim Benguerine</h1>
+                        <p>I am currently pursuing a Master's in Programming, Algorithms for the Internet, Distribution,
+                            and Systems. My passion lies in creating innovative software solutions and exploring the
+                            depths of machine learning and AI.</p>
                     </div>
                 </div>
             </div>
@@ -65,7 +68,6 @@
             <div class="row">
                 <div class="title">
                     <h1>About Me</h1>
-                    <p>Delivering Exceptional Solutions Tailored To Your Needs</p>
                 </div>
             </div>
             <div class="row">
@@ -75,35 +77,16 @@
                             <img src="img/me7.png" alt='me' />
                         </div>
                         <div class="text">
-                            <h4>I'm Wassim Ben</h4>
-                            <h6>A <span>Software Developer</span> and <span>Algorithms Expert</span>, proficient in backend development, Telegram bot creation, web scraping, and automations. Based in Paris, France.</h6>
-                            <p>With diverse expertise ranging from Python, C, C++, to Java, I provide unique and tailored solutions to help your projects soar. I've successfully assisted numerous clients in a wide range of tasks, making me a trusted choice
-                                for your software needs.</p>
-                            <div class="skills">
-                                <h6>Technologies & Tools I'm Proficient With:</h6>
-                                <div class="skills-list">
-                                    <ul class="fa-ul">
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Python (including OpenCV, Detectron2, OCR, Flask, BeautifulSoup, Scrapy)</li>
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Java (including Gradle and Spring Framework)</li>
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>C++</li>
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Algorithm Development</li>
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Machine Learning</li>
-                                    </ul>
-                                    <ul class="fa-ul">
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Web Scraping & Data Extraction</li>
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Image Processing</li>
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>REST API Development and Integration</li>
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>SQL Database Management</li>
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Telegram API & Bots</li>
-                                    </ul>
-                                    <ul class="fa-ul">
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Docker (Containerization)</li>
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Version Control (Git)</li>
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Testing (Unit, Integration, System)</li>
-                                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CI/CD</li>
-                                    </ul>
-                                </div>
-                            </div>
+                            <h4>I'm Wassim Benguerine</h4>
+                            <h6>A <span>Software Developer</span> and <span>Tech Enthusiast</span> with a passion for
+                                backend development, machine learning, and automation. Based in Paris, France, I am
+                                actively seeking a 6-month internship, available to start in January, February.</h6>
+                            <p>Currently pursuing a Master’s in Programming, Algorithms for the Internet, Distribution,
+                                & Systems at Université Paris Cité, I have a strong foundation in Mathematical Sciences
+                                and Computer Science, with education from France and Morocco. My expertise spans Java,
+                                Python I am also familiar with C++ and C. I have a track record of providing innovative
+                                solutions across various projects. My collaborative work style and ability to adapt to
+                                new challenges make me a valuable addition to any team.</p>
                         </div>
                     </div>
                 </div>
@@ -117,43 +100,46 @@
         <div class="container">
             <div class="row">
                 <div class="title text-center">
-                    <h1>Services</h1>
+                    <h1>Skills</h1>
                 </div>
                 <div class="row">
                     <div class="service-content">
                         <div class="box">
                             <div class="icon"><i class="fa fa-laptop"></i></div>
-                            <h5>Custom Application Development</h5>
-                            <p>Developing tailored applications in Python, Java, and C++, from small scale utilities to large, complex systems. Your requirements, my priority.</p>
+                            <h5>Programming Languages</h5>
+                            <p>Skilled in C, C++, Java, and Python. Experienced in developing scalable and efficient
+                                applications.</p>
                         </div>
                         <div class="box">
                             <div class="icon"><i class="fa fa-code"></i></div>
-                            <h5>Data Extraction & Processing</h5>
-                            <p>Expertise in data extraction and web scraping using Python libraries like BeautifulSoup and Scrapy, turning raw data into meaningful insights.</p>
+                            <h5>Web Technologies</h5>
+                            <p>Strong understanding in HTML5, CSS3, JavaScript, QML, and web
+                                development principles and responsive design.</p>
                         </div>
                         <div class="box">
                             <div class="icon"><i class="fas fa-palette"></i></div>
-                            <h5>Image Processing</h5>
-                            <p>Proficient in image processing techniques with OpenCV and Detectron2. Equipped to handle OCR operations and more for your project needs.</p>
+                            <h5>Machine Learning & AI</h5>
+                            <p>Highly skilled in machine learning and AI, with experience in utilizing TensorFlow,
+                                Keras, scikit-learn, and a comprehensive understanding of CNNs, RNNs.</p>
                         </div>
                         <div class="box">
                             <div class="icon"><i class="fas fa-wallet"></i></div>
-                            <h5>Algorithm Development</h5>
-                            <p>Efficient and optimized algorithm creation for a range of applications, ensuring maximum performance and reliable results.</p>
+                            <h5>Database Management</h5>
+                            <p>Strong background in database management with MySQL, Oracle (including PLSQL), and
+                                PostgreSQL.</p>
                         </div>
                         <div class="box">
                             <div class="icon"><i class="fa fa-mobile"></i></div>
-                            <h5>Machine Learning & AI Solutions</h5>
-                            <p>Specializing in crafting cutting-edge solutions driven by Machine Learning and AI. From predictive analytics to advanced data processing, I deliver intelligent functionalities tailored to your unique requirements, ensuring
-                                optimal outcomes and insights.</p>
-
+                            <h5>DevOps and Agile Methodologies</h5>
+                            <p>Knowledgeable in AWS cloud services, Scrum framework, UML, and CI/CD principles for
+                                efficient software development and deployment.</p>
                         </div>
                         <div class="box">
                             <div class="icon"><i class="fa fa-rocket"></i></div>
-                            <h5>Telegram Bot & Diverse Chatbot Solutions</h5>
-                            <p>Designing and implementing tailored chatbots adaptable for multiple platforms, including the Telegram API. Boost user engagement, streamline processes, and offer real-time support across various digital touchpoints.</p>
+                            <h5>Design Patterns & Algorithm Development</h5>
+                            <p>Experienced in using design patterns like Singleton, Factory, Observer, MVC, and
+                                developing optimized algorithms for various applications.</p>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -274,14 +260,13 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="footer-logo">Pfolio</div>
+                <div class="footer-logo">WB</div>
             </div>
         </div>
         </div>
     </footer>
     <section class="copyright">
         <div class="container">
-            <p>© <span id="year"></span> | Designed and Developed By Wassim Ben. | All rights reserved.</p>
         </div>
     </section>
     <div class="lightbox hide">
@@ -292,7 +277,6 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <div id="imageContainer">
-                <!-- Images will be inserted here -->
             </div>
             <p id="projectInfo"></p>
             <p id="additionalText"></p>
