--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="description"
-        content="A clean, beautiful and responsive portfolio template for Developers! using only Html, CSS, and JavaScript">
-    <meta name="author" content="Puskar Adhikari">
-
     <title>Wassim Ben| Software Engineer</title>
+    <link rel="icon" type="image/png" href="img/logo.png">
     <link href="./css/header.css" rel="stylesheet" />
     <link href="./css/main.css" rel="stylesheet" />
     <link href="./css/home.css" rel="stylesheet" />
