--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     <section class="home" id="home">
         <div class="container">
             <div class="additional-image">
-                <img src="img\ball.png" class="rotating-image" alt="Description">
             </div>
             <div class="row full-screen">
                 <div class="home-content">
@@ -54,6 +53,11 @@
                             and Systems. My passion lies in creating innovative software solutions and exploring the
                             depths of machine learning and AI.</p>
                     </div>
+                    <div class="cv-btn">
+                        <a href="cv/Curriculum vitae Wassim_BENGUERINE.pdf" download="Wassim_Benguerine_CV">Download
+                            CV</a>
+                    </div>
+
                 </div>
             </div>
         </div>
