--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
                                 actively seeking a 6-month internship, available to start in January, February.</h6>
                             <p>Currently pursuing a Master’s in Programming, Algorithms for the Internet, Distribution,
                                 & Systems at Université Paris Cité, I have a strong foundation in Mathematical Sciences
-                                and Computer Science, with education from France and Morocco. My expertise spans Java,
-                                Python I am also familiar with C++ and C. I have a track record of providing innovative
+                                and Computer Science, with education from France and Morocco. My expertise spans in
+                                Python,
+                                Java I am also familiar with C++ and C. I have a track record of providing innovative
                                 solutions across various projects. My collaborative work style and ability to adapt to
                                 new challenges make me a valuable addition to any team.</p>
                         </div>
