--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="HTML, CSS, JavaScript">
-    <title>Wassim Ben| Software Engineer</title>
+    <title>Wassim Benguerine | Software Engineer</title>
     <link rel="icon" type="image/png" href="img/logo.png">
     <link href="./css/header.css" rel="stylesheet" />
     <link href="./css/main.css" rel="stylesheet" />
