--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="s">
             <div class="row">
                 <div class="brand-name">
                     <a href="/" class="logo">WB</a>
@@ -31,119 +31,118 @@
                 </div>
                 <div class="navbar">
                     <ul>
-                        <li><a href="#home" class="active">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#services">Skills</a></li>
-                        <li><a href="#portfolio">Latest Works</a></li>
+                        <li><a href="#about">À propos</a></li>
+                        <li><a href="#services">Compétences</a></li>
+                        <li><a href="#portfolio">Dernières Réalisations</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </header>
-    <section class="home" id="home">
-        <div class="container">
-            <div class="additional-image">
-            </div>
-            <div class="row full-screen">
-                <div class="home-content">
-                    <div class="block">
-                        <h6>Hi, my name is</h6>
-                        <h1>Wassim Benguerine</h1>
-                        <p>I am currently pursuing a Master's in Programming, Algorithms for the Internet, Distribution,
-                            and Systems. My passion lies in creating innovative software solutions and exploring the
-                            depths of machine learning and AI.</p>
-                    </div>
-                    <div class="cv-btn">
-                        <a href="cv/Curriculum vitae Wassim_BENGUERINE.pdf" download="Wassim_Benguerine_CV">Download
-                            CV</a>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        </div>
-    </section>
-
     <section class="about" id="about">
         <div class="container">
             <div class="row">
                 <div class="title">
-                    <h1>About Me</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="about-content">
                     <div class="row">
                         <div class="img">
-                            <img src="img/me7.png" alt='me' />
+                            <img src="img/mee.png" alt='me' />
                         </div>
                         <div class="text">
-                            <h4>I'm Wassim Benguerine</h4>
-                            <h6>A <span>Software Developer</span> and <span>Tech Enthusiast</span> with a passion for
-                                backend development, machine learning, and automation. Based in Paris, France, I am
-                                actively seeking a 6-month internship, available to start in January, February.</h6>
-                            <p>Currently pursuing a Master’s in Programming, Algorithms for the Internet, Distribution,
-                                & Systems at Université Paris Cité, I have a strong foundation in Mathematical Sciences
-                                and Computer Science, with education from France and Morocco. My expertise spans in
-                                Python,
-                                Java I am also familiar with C++ and C. I have a track record of providing innovative
-                                solutions across various projects. My collaborative work style and ability to adapt to
-                                new challenges make me a valuable addition to any team.</p>
+                            <h4>👋 Bonjour, je suis Wassim Benguerine</h4>
+                            <p>
+                                Passionné de <mark>Développement Logiciel</mark> et de <mark>Technologie</mark>, je me
+                                spécialise dans le développement backend, l'apprentissage automatique, et
+                                l'automatisation. Actuellement basé à Paris, France, je suis à la recherche d'une
+                                <strong>alternance</strong> pour mon M2 durant l'année académique 2024/2025, disponible
+                                dès septembre.
+                            </p>
+                            <br>
+                            <p>
+                                Je finalise actuellement mon Master en Programmation, Algorithmes pour l'Internet, la
+                                Distribution, & Systèmes à l'Université Paris Cité. Mon parcours académique m'a permis
+                                de construire une solide base en Sciences Mathématiques et Informatique, avec des études
+                                en France et au Maroc.
+                            </p>
+                            <p>Mes compétences techniques s'articulent autour de <strong>Python</strong> et
+                                <strong>Java</strong>, avec une bonne maîtrise en C++ et C. J'ai acquis de l'expérience
+                                dans le <em>secteur de l'assurance</em> à travers un stage significatif chez<strong> <span
+                                    style="color: #004BA8;"><em>AXA France</em></span></strong> via<strong>  <span
+                                    style="color: #00458b;"><em>Sollers</em></span> <span
+                                    style="color: #78a742;"><em>Consulting</em></span></strong> , où j'ai développé des
+                                solutions innovantes.
+                            </p>
+                            <br>
+                            <p><strong>Certifications:</strong></p>
+                            <ul>
+                                <li><a href="/certificats/clmsCertificate_dev.pdf" target="_blank">Fundamentaux du
+                                        Développeur InsuranceSuite - Examen Elysian</a></li>
+                                <li><a href="/certificats/clmsCertificate_cc.pdf" target="_blank">Certification
+                                        Guidewire en configuration de ClaimCenter</a></li>
+                            </ul>
+                            <br>
+                            <p>Animé par une réelle passion pour l'innovation technologique et l'excellence, je suis
+                                prêt à relever de nouveaux défis et à contribuer activement au succès d'une équipe
+                                dynamique.</p>
                         </div>
+
+
+
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
-        </div>
-        </div>
     </section>
     <section class="services" id="services">
         <div class="container">
             <div class="row">
                 <div class="title text-center">
-                    <h1>Skills</h1>
+                    <h1>Compétences</h1>
                 </div>
                 <div class="row">
                     <div class="service-content">
                         <div class="box">
                             <div class="icon"><i class="fa fa-laptop"></i></div>
-                            <h5>Programming Languages</h5>
-                            <p>Skilled in C, C++, Java, and Python. Experienced in developing scalable and efficient
-                                applications.</p>
-                        </div>
-                        <div class="box">
-                            <div class="icon"><i class="fa fa-code"></i></div>
-                            <h5>Web Technologies</h5>
-                            <p>Strong understanding in HTML5, CSS3, JavaScript, QML, and web
-                                development principles and responsive design.</p>
+                            <h5>Langages de programmation</h5>
+                            <p>Java, Python, Gosu, C, C++. Développement d'applications performantes, avec un intérêt
+                                pour l'assurance.</p>
                         </div>
                         <div class="box">
                             <div class="icon"><i class="fas fa-palette"></i></div>
-                            <h5>Machine Learning & AI</h5>
-                            <p>Highly skilled in machine learning and AI, with experience in utilizing TensorFlow,
-                                Keras, scikit-learn, and a comprehensive understanding of CNNs, RNNs.</p>
+                            <h5>Machine Learning & IA</h5>
+                            <p>Utilisation de TensorFlow, Keras, scikit-learn. Connaissance des CNNs, RNNs, et modèles
+                                Transformer.</p>
                         </div>
                         <div class="box">
-                            <div class="icon"><i class="fas fa-wallet"></i></div>
-                            <h5>Database Management</h5>
-                            <p>Strong background in database management with MySQL, Oracle (including PLSQL), and
-                                PostgreSQL.</p>
+                            <div class="icon"><i class="fas fa-database"></i></div>
+                            <h5>Gestion de Bases de Données</h5>
+                            <p>MySQL, Oracle, PostgreSQL. Solutions de données pour applications critiques, pertinentes
+                                en assurance.</p>
                         </div>
                         <div class="box">
-                            <div class="icon"><i class="fa fa-mobile"></i></div>
-                            <h5>DevOps and Agile Methodologies</h5>
-                            <p>Knowledgeable in AWS cloud services, Scrum framework, UML, and CI/CD principles for
-                                efficient software development and deployment.</p>
+                            <div class="icon"><i class="fa fa-code"></i></div>
+                            <h5>Technologies Web</h5>
+                            <p>HTML5, CSS3, JavaScript. Utilisation de Spring, Flask, FastAPI pour REST APIs et
+                                conception responsive.</p>
                         </div>
                         <div class="box">
-                            <div class="icon"><i class="fa fa-rocket"></i></div>
-                            <h5>Design Patterns & Algorithm Development</h5>
-                            <p>Experienced in using design patterns like Singleton, Factory, Observer, MVC, and
-                                developing optimized algorithms for various applications.</p>
+                            <div class="icon"><i class="fa fa-cloud"></i></div>
+                            <h5>DevOps et Méthodologies Agiles</h5>
+                            <p>Pratiques DevOps, AWS, Docker, Git, CI/CD. Agile avec Scrum pour un développement
+                                logiciel rapide.</p>
+                        </div>
+                        <div class="box">
+                            <div class="icon"><i class="fas fa-sync-alt"></i></div>
+                            <h5>Adaptabilité en Développement</h5>
+                            <p>Apte à maîtriser rapidement nouvelles technologies. Focalisé sur la création
+                                d'applications performantes et la résolution de problèmes.</p>
                         </div>
                     </div>
                 </div>
+
+
             </div>
         </div>
     </section>
@@ -151,7 +150,7 @@
         <div class="container">
             <div class="row">
                 <div class="title text-center">
-                    <h1>Latest Works</h1>
+                    <h1>Dernières Réalisations</h1>
                 </div>
             </div>
             <div class="row">
@@ -179,6 +178,51 @@
                     </div>
                     <div class="item" data-id="ui">
                         <div class="inner">
+                            <img src="./img/portfolio/ocr/extract.png" alt="portfolio" />
+                            <div class="overlay">
+                                <span class="fa fa-plus"></span>
+                                <h4>Image Processing</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item" data-id="ui">
+                        <div class="inner">
+                            <img src="./img/portfolio/map/image.png" alt="portfolio" />
+                            <div class="overlay">
+                                <span class="fa fa-plus"></span>
+                                <h4>Web/Algorithm App</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item" data-id="ui">
+                        <div class="inner">
+                            <img src="./img/portfolio/lamp/image.png" alt="portfolio" />
+                            <div class="overlay">
+                                <span class="fa fa-plus"></span>
+                                <h4>Game Development</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item" data-id="ui">
+                        <div class="inner">
+                            <img src="./img/portfolio/telegram/image.png" alt="portfolio" />
+                            <div class="overlay">
+                                <span class="fa fa-plus"></span>
+                                <h4>Telegram Bot</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item" data-id="ui">
+                        <div class="inner">
+                            <img src="./img/portfolio/graphy/image.png" alt="portfolio" />
+                            <div class="overlay">
+                                <span class="fa fa-plus"></span>
+                                <h4>Desktop/Algorithm App</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item" data-id="ui">
+                        <div class="inner">
                             <img src="./img/portfolio/health/health.png" alt="portfolio" />
                             <div class="overlay">
                                 <span class="fa fa-plus"></span>
@@ -198,43 +242,6 @@
                     </div>
                     <div class="item" data-id="ui">
                         <div class="inner">
-                            <img src="./img/portfolio/ocr/extract.png" alt="portfolio" />
-                            <div class="overlay">
-                                <span class="fa fa-plus"></span>
-                                <h4>Image Processing</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item" data-id="ui">
-                        <div class="inner">
-                            <img src="./img/portfolio/map/image.png" alt="portfolio" />
-                            <div class="overlay">
-                                <span class="fa fa-plus"></span>
-                                <h4>Web/Algorithm App</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item" data-id="ui">
-                        <div class="inner">
-                            <img src="./img/portfolio/graphy/image.png" alt="portfolio" />
-                            <div class="overlay">
-                                <span class="fa fa-plus"></span>
-                                <h4>Desktop/Algorithm App</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item" data-id="ui">
-                        <div class="inner">
-                            <img src="./img/portfolio/lamp/image.png" alt="portfolio" />
-                            <div class="overlay">
-                                <span class="fa fa-plus"></span>
-                                <h4>Game Development</h4>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item" data-id="ui">
-                        <div class="inner">
                             <img src="./img/portfolio/sofascrap/image0.png" alt="portfolio" />
                             <div class="overlay">
                                 <span class="fa fa-plus"></span>
@@ -242,17 +249,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="item" data-id="ui">
-                        <div class="inner">
-                            <img src="./img/portfolio/telegram/image.png" alt="portfolio" />
-                            <div class="overlay">
-                                <span class="fa fa-plus"></span>
-                                <h4>Telegram Bot</h4>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
