--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                             <br>
                             <p><strong>Certifications:</strong></p>
                             <ul>
-                                <li><a href="./certificats/clmsCertificate_dev.pdf" target="_blank">Fundamentaux du
+                                <li><a  href="https://ababoq.github.io/My-Portfolio/certificats/clmsCertificate_dev.pdf" target="_blank">Fundamentaux du
                                         Développeur InsuranceSuite - Examen Elysian</a></li>
-                                <li><a href="./certificats/clmsCertificate_cc.pdf" target="_blank">Certification
+                                <li><a  href="https://ababoq.github.io/My-Portfolio/certificats/clmsCertificate_cc.pdf" target="_blank">Certification
                                         Guidewire en configuration de ClaimCenter</a></li>
                             </ul>
                             <br>
